force-app/main/default/objects/Tournment__c/Tournment__c.object-meta.xml
<CustomObject>
    <label>Tournment</label>
    <nameField>
        <label>Tournment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tournments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>