force-app/main/default/objects/Tournment__c/fields/Tournment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Tournment_End_Date__c</fullName>
    <label>Tournment End Date</label>
    <type>Date</type>
</CustomField>