force-app/main/default/objects/Tournment__c/fields/Tournment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Tournment_Start_Date__c</fullName>
    <label>Tournment Start Date</label>
    <type>Date</type>
</CustomField>