force-app/main/default/objects/Tournment__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Year</label>
    <referenceTo>Year__c</referenceTo>
    <relationshipLabel>Tournments</relationshipLabel>
    <relationshipName>Tournments</relationshipName>
    <type>Lookup</type>
</CustomField>